k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: opet
  labels:
    app.kubernetes.io/name: opet-frontend
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/name: opet-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
